manifests/cluster-addons/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
    - port: 8080
      targetPort: 8080
