manifests/cluster-addons/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sabnzbd
