manifests/cluster-addons/sabnzbd/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: sabnzbd
            tailscale.com/parent-resource-ns: sabnzbd
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app.kubernetes.io/name: radarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app.kubernetes.io/name: sonarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: lidarr
            app.kubernetes.io/name: lidarr
        - matchLabels:
            app.kubernetes.io/part-of: arr
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    # TODO: restrict
    - toEntities:
        - world
